--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,55 @@
-<p>navbar works!</p>
+<mat-toolbar class="toolbar" color="primary">
+  <!-- Brand -->
+  <a routerLink="/" class="brand">Dividi i costi</a>
+
+  <!-- Greeting left (solo loggato) -->
+  <ng-container *ngIf="fbUser && profile">
+    <div class="greeting">
+      <img [src]="avatarSrc()" alt="avatar" class="avatar" />
+      <span class="hello">Ciao,</span>
+      <span class="nickname">{{ displayName() }}</span>
+    </div>
+  </ng-container>
+
+  <!-- Nav links -->
+  <nav class="nav" *ngIf="!loading">
+    <!-- Sloggato -->
+    <ng-container *ngIf="!fbUser; else loggedNav">
+      <a mat-button routerLink="/register" routerLinkActive="active">Register</a>
+      <a mat-button routerLink="/login" routerLinkActive="active">Login</a>
+    </ng-container>
+
+    <!-- Loggato -->
+    <ng-template #loggedNav>
+      <a mat-button routerLink="/profile" routerLinkActive="active">Profile</a>
+    </ng-template>
+  </nav>
+
+  <span class="spacer"></span>
+
+  <!-- Right side -->
+  <ng-container *ngIf="!loading; else loadingTpl">
+    <!-- Loggato: menu account -->
+    <ng-container *ngIf="fbUser as user; else guestTpl">
+      <button mat-button [matMenuTriggerFor]="accountMenu">
+        <img [src]="avatarSrc()" alt="avatar" class="avatar" />
+        <span class="email">{{ user.email }}</span>
+      </button>
+      <mat-menu #accountMenu="matMenu">
+        <button mat-menu-item routerLink="/profile">Profilo</button>
+        <mat-divider></mat-divider>
+        <button mat-menu-item (click)="doSignOut()">Esci</button>
+      </mat-menu>
+    </ng-container>
+
+    <!-- Sloggato: bottoni a destra -->
+    <ng-template #guestTpl>
+      <a mat-stroked-button color="accent" routerLink="/register">Register</a>
+      <a mat-stroked-button routerLink="/login">Login</a>
+    </ng-template>
+  </ng-container>
+
+  <ng-template #loadingTpl>
+    <mat-spinner diameter="20"></mat-spinner>
+  </ng-template>
+</mat-toolbar>
