--- a/src/app/components/registration/registration.component.scss
+++ b/src/app/components/registration/registration.component.scss
@@ -1,12 +1,16 @@
 .card {
   max-width: 560px;
-  margin: 24px auto;
+  color: white;
+  margin: 32px auto;
+  padding: 16px;
 }
 
 .form {
   display: flex;
   flex-direction: column;
   gap: 16px;
+  margin: 32px;
+
 }
 
 .w100 {
@@ -18,17 +22,23 @@
   align-items: center;
 }
 
-.ml8 { margin-left: 8px; }
+.ml8 {
+  margin-left: 8px;
+}
 
 .alert {
   padding: 12px 14px;
   border-radius: 8px;
   margin-bottom: 16px;
+
   &.info {
     background: #eaf4ff;
     border: 1px solid #cfe4ff;
   }
-  .actions { margin-top: 8px; }
+
+  .actions {
+    margin-top: 8px;
+  }
 }
 
 .hint {
